- make it possible to move multiple tasks at once in project view, like "mark multiple" and then drag-drop one moves all of them the same distance, so a whole block of tasks can be moved at once when a project shifts for example, also make it possible to mark multiple tasks with a zone, like from top left to bottom right corner. (zone should work like it does on windows desktop/explorer when trying to mark multiple files) - Ability to transfer ownership of organizations, only owner and site admin should be able to do this.
